# android-iced-example

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  build.sh
GameActivity/: Cargo.toml  README.md  build.gradle
GameActivity/app/: build.gradle
GameActivity/app/src/main/: AndroidManifest.xml
GameActivity/app/src/main/java/co/realfit/example/: MainActivity.java
GameActivity/src/: lib.rs
NativeActivity/: Cargo.toml  README.md
NativeActivity/app/: build.gradle
NativeActivity/gradle/wrapper/: gradle-wrapper.properties
NativeActivity/src/: clipboard.rs  java.rs  lib.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/co/realfit/example/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
src/: controls.rs  lib.rs  scene.rs
